docs(api): add swag annotations
